# te-clipboard

./: Cargo.toml  README.md  appveyor.yml  te-clipboard.toml
src/: config.rs  lib.rs  rt.rs
