[package]
name = "te-clipboard"
version = "0.3.2"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"

[dependencies.winapi]
version = "0.3"
features = ["heapapi"]

[dependencies]
lazy_static = "1"
crossbeam-channel = "0"

clipboard-win = "2"
windows-win = "2"

serde = "1"
serde_derive = "1"
toml = "0.5"
regex = "1"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
