[package]
name = "te-clipboard"
version = "0.3.5"
authors = ["Douman <douman@gmx.se>"]
edition = "2018"

[dependencies.winapi]
version = "0.3"
features = ["heapapi"]

[dependencies]
clipboard-win = "3.0.0-alpha"
windows-win = "2"

serde = "1"
serde_derive = "1"
toml = "0.5"
regex = "1"

[lib]
crate-type = ["cdylib"]

[profile.release]
lto = true
opt-level = "z"
